# Yobble_Main

./: .gitignore  README.md  Yobble.SED  extract-zip.cmd  runadrun.bat  temp-prep.json  update.cmd
.github/workflows/: android-build.yml
Android src/Yobble/: .gitignore  settings.gradle.kts  yobble-release.p12
desktop/: main.js  package.json  preload.cjs
launcher/: CMakeLists.txt
launcher/src/: main.cpp
server/: INSTALL-EXPRESS.cmd  package-lock.json  package.json  run.cmd  tos-deafult  update.cmd
server-maintnance/: package-lock.json  package.json
server/src/: ai-moderation.js  auth.js  ban_worker.js  db.js  index.js  notify.js  sqlite-compat.js  tos.js  totp.js  update-server  util.js  wallet.js
server/tools/: make-admin.js  make-mod.js  update-deps.js
web_src/: 404.html  Permanetly-Banned.html  User-Settings.html  admin.html  appeal.html  blog-post.html  blog.html  connect-wallet.html  download.html  game-dashboard-analytics.html  game-dashboard-levels.html  game-dashboard-uploads.html  game-dashboard-versions.html  game-dashboard.html  game.html  games.html  giftcodes.html  ide-3d.html  index.html  item-upload.html  item.html  levels.html  library.html  login.html  maintenance.html  market.html  mod-appeals.html  mod-bans.html  mod-dashboard.html  mod-reports.html  mod-tos.html  moderation.html  modqueue.html  money.html  packager.html  play.html  profile.html  register.html  report.html  robots.txt  (+10 more)
web_src/chat/: index.html  style.css
web_src/css/: app.css  layout.css  theme.css
web_src/downloads/: android-apk.html  linux.html  windows.html
(+108 files in other folders)
